--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite", 
-    "build": "vite build", 
-    "preview": "vite preview", 
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "start-app": "vite build; bun api/app.js"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsdom": "^26.1.0"
   }
